--- a/Views/partials/paginas.ejs
+++ b/Views/partials/paginas.ejs
@@ -4,7 +4,11 @@
       <% var anterior = (paginaAtual-1)%>
       <% if(paginaAtual>1){%>
         <li class="page-item" id="anterior">
-          <span class="page-link"><a class="pagina-link"  href="/pacientes/?page=<%=anterior%>">Anterior</a></span>
+          <% if(idPagina === 1){%>
+            <span class="page-link"><a class="pagina-link"  href="/pacientes/?page=<%=anterior%>">Anterior</a></span>
+          <%}else{%>
+            <span class="page-link"><a class="pagina-link"  href="/pacientes/filter/page=<%=anterior%>?matricula=<%=filterMatricula%>&data=<%=filterData%>&status=<%=filterStatus%>&especialidade=<%=filterEspecialidade%>&nome=<%=filterNome%>">Anterior</a></span>
+          <%}%>
         </li>
       <%}else{%>
         <li class="page-item disabled">
@@ -12,21 +16,15 @@
         </li>
       <%}%>
 
-      <!--página anterior a página atual-->
-      <% var numeroAnterior = (paginaAtual-1)%>
-      <% if (paginaAtual>1) {%>
-        <li class="page-item" id="numero-anterior">
-          <span class="page-link">
-            <a class="pagina-link"  href="/pacientes/?page=<%=numeroAnterior%>"><%=numeroAnterior%></a>
-          </span>
-        </li>
-      <%}%>
-
-      <!--página atual da página-->
+      <!--numero atual da página-->
       <li class="page-item active " id="pagina-atual">
-        <span class="page-link"><a class="pagina-link pagina-ativa" href="/pacientes/?page=<%=paginaAtual%>"><%=paginaAtual%></a></span>
+        <% if(idPagina === 1){%>
+          <span class="page-link"><a class="pagina-link pagina-ativa" href="/pacientes/?page=<%=paginaAtual%>"><%=paginaAtual%></a></span>
+        <%}else{%>
+          <span class="page-link"><a class="pagina-link pagina-ativa" href="/pacientes/filter/page=<%=paginaAtual%>?matricula=<%=filterMatricula%>&data=<%=filterData%>&status=<%=filterStatus%>&especialidade=<%=filterEspecialidade%>&nome=<%=filterNome%>"><%=paginaAtual%></a></span>
+        <%}%>
       </li>
-
+        
 
       <!--página posterior página-->
       <% let deslocamentoPagina = Number.parseInt(5) %>
@@ -34,16 +32,13 @@
       <% let totalPaginas = Math.ceil(pacientes.count/deslocamentoPagina)%>
       <% console.log("Total de páginas:",totalPaginas, "Total Pacientes:",pacientes.count) %>
 
-      <% if((paginaAtual=>1) && (numeroPosterior<=totalPaginas)){%>
-        <li class="page-item" id="numero-posterior">
-          <span class="page-link"><a class="pagina-link" href="/pacientes/?page=<%=numeroPosterior%>"><%=numeroPosterior%></a></span>
-        </li>
-      <%}%> 
-
-      <!--página posterior página-->
       <% if(numeroPosterior<=totalPaginas){%>
         <li class="page-item" id="proximo">
-          <span class="page-link"><a class="pagina-link" href="/pacientes/?page=<%=numeroPosterior%>">Próximo</a></span>
+          <% if(idPagina ===1){%>
+            <span class="page-link"><a class="pagina-link" href="/pacientes/?page=<%=numeroPosterior%>">Próximo</a></span>
+          <%}else{%>
+            <span class="page-link"><a class="pagina-link"  href="/pacientes/filter/page=<%=numeroPosterior%>?matricula=<%=filterMatricula%>&data=<%=filterData%>&status=<%=filterStatus%>&especialidade=<%=filterEspecialidade%>&nome=<%=filterNome%>">Próximo</a></span>
+          <%}%>
         </li>
       <%}else{%>
         <li class="page-item disabled">
