Criando uma função para calcular idade automaticamente
alterando exibição do telefone e celular na página de pacientes para melhor visualização.

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -28,8 +28,7 @@
 				<th class="celula celula-pequena">Data</th>
 				<th class="celula celula-grande">Nome</th>
 				<th class="celula celula-pequena">Data Nascimento</th>
-				<th class="celula celula-pequena">Telefone</th>
-				<th class="celula celula-pequena">Celular</th>
+				<th class="celula celula-pequena">Telefone<br>Celular</th>
 				<th class="celula celula-pequena">Especialidade</th>
 				<th class="celula celula-grande">Observação</th>
 			</tr>
