--- a/Views/partials/ListaPacientes.ejs
+++ b/Views/partials/ListaPacientes.ejs
@@ -4,9 +4,8 @@
             <td class="td-conteudo"><%=paciente.Matricula%></td>
             <td class="td-conteudo"><%=paciente.DataCriacao%></td>
             <td class="td-conteudo"><%=paciente.Nome%></td>
-            <td class="td-conteudo"><%=paciente.Nascimento%></td>
-            <td class="td-conteudo"><%=paciente.Telefone%></td>
-            <td class="td-conteudo"><%=paciente.Celular%></td>
+            <td class="td-conteudo"><%=paciente.Nascimento%><br><%=paciente.Idade%> anos</td>
+            <td class="td-conteudo"><%=paciente.Telefone%><br><%=paciente.Celular%></td>
             <td class="td-conteudo"><%=paciente.Especialidade%></td>
             <td class="td-conteudo"><%=paciente.Observacao%></td>
         </tr>
