Criando botão de limpar o formulário de busca

--- a/Views/partials/BuscarPacientes.ejs
+++ b/Views/partials/BuscarPacientes.ejs
@@ -99,8 +99,11 @@
         value="<%=filterNome%>"
       <%}%>>
     </div>
-    <div class="col caixa-botao">
+    <div class="caixa-botao">
       <button type="submit" class="btn btn-primary botao-pesquisar">Buscar</button>
+    </div>
+    <div class="caixa-botao">
+      <button type="button" class="btn btn-primary btn-warning botao-limpar" onclick="limparFormBusca()">Limpar</button>
     </div>
   </div>
   
