Criando o modal para tratar o paciente da listagem

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -37,9 +37,11 @@
 			<%- include ('../partials/ListaPacientes') %> 
 		</tbody>
 	</table>
+	<%- include('../partials/modal')%>
 	<script src="/js/Validation/DadosConverter.js"></script>
 	<script src="/js/Validation/mascara.js"></script>
 	<script src="/js/Validation/Validacao.js"></script>
+	<script src="/js/modal.js"></script>
 </body>
 
 </html>
