--- a/Views/partials/ListaPacientes.ejs
+++ b/Views/partials/ListaPacientes.ejs
@@ -1,7 +1,8 @@
 <% if(pacientes.rows) { %>
     <% pacientes.rows.forEach( (paciente)=> {%>
         <tr class="tr-conteudo">
-            <td class="td-conteudo"><%=paciente.Matricula%></td>
+            <td class="td-conteudo"><%=paciente.Matricula%><br><button onclick='abrirModal()' type="button" class="btn btn-primary" >
+                Registrar</button></td>
             <td class="td-conteudo"><%=paciente.DataCriacao%></td>
             <td class="td-conteudo"><%=paciente.Nome%></td>
             <td class="td-conteudo"><%=paciente.Nascimento%><br><%=paciente.Idade%> anos</td>
