Trabalhando nas atualizações dos pacientes através do modal

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -21,6 +21,9 @@
 	<div class="numero-paginas">
 		<%- include('../partials/paginas')%>
 	</div>
+	<div class="caixa-modal">
+		<%- include('../partials/modal')%>
+	</div>
 	<table class='tabela-pacientes table-hover text-center'>
 		<thead class="cabecalho-tabela">
 			<tr class="linha-cabecalho">
