--- a/Views/partials/ListaPacientes.ejs
+++ b/Views/partials/ListaPacientes.ejs
@@ -2,7 +2,7 @@
     <% pacientes.rows.forEach( (paciente)=> {%>
         <tr class="tr-conteudo">
             <td class="td-conteudo"><%=paciente.Matricula%><br>
-                <input type="checkbox" class="checkboxRegistro" id="checkboxRegistro" value="<%=paciente.id%>">
+                <input type="checkbox" class="checkboxRegistro" id="checkboxRegistro" value="<%=paciente.Matricula%>">
             </td>
             <td class="td-conteudo"><%=paciente.DataCriacao%></td>
             <td class="td-conteudo"><%=paciente.Nome%></td>
