--- a/Views/partials/modal.ejs
+++ b/Views/partials/modal.ejs
@@ -11,15 +11,15 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form method="POST" id="formRegistro">
+            <form >
                 <div class="modal-body">
                     <div>
                         <label for="atendenteRegistro">Atendente:</label>
-                        <input class="form-control" name="atendenteRegistro" value="<%=user.login.toUpperCase()%>" readonly>
+                        <input class="form-control" name="atendenteRegistro" id="atendenteRegistro" value="<%=user.login.toUpperCase()%>" readonly>
                     </div>
                     <div>
                         <label for="statusRegistro" class="mt-2">Status:</label>
-                        <select type="text" name="statusRegistro" class="form-control">
+                        <select type="text" name="statusRegistro" id="statusRegistro" class="form-control">
                             <option>SEM CONTATO</option>
                             <option>FINALIZADO</option>
                             <option>FECHADO</option>
@@ -31,12 +31,12 @@
                     </div>
                     <div>
                         <label for="informacaoRegistro" class="mt-1">Informação:</label>
-                        <textarea class="form-control" name="informacaoRegistro" rows="3"></textarea>
+                        <textarea class="form-control" name="informacaoRegistro" id="informacaoRegistro" rows="3"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" onclick="fecharModal()">Fechar</button>
-                    <button type="submit" id="botaoAtualizar"  class="btn btn-primary">Salvar</button>
+                    <button type="button" id="botaoAtualizar" onclick="atualizarPaciente()" class="btn btn-primary">Salvar</button>
                 </div>
             </form>
         </div>
