--- a/public/css/tabela.css
+++ b/public/css/tabela.css
@@ -14,14 +14,17 @@
 }
 .celula{
 	padding: 0.4rem;
-	border:1px solid black;
+	border:1px solid lightgray;
 	padding-top: 1rem ;
 	font-family: "raleway",Cambria,sans-serif;
 	color:white;
 }
-
 .celula-pequena{
-	width:8rem;
+	width:6rem;
+}
+
+.celula-media{
+	width:10rem;
 }
 
 .celula-grande{
@@ -30,10 +33,15 @@
 
 .tr-conteudo{
 	text-align: center;
-	border:1px solid black;
+	border:1px solid lightgray;
 }
 .td-conteudo{
 	padding: 6px;
-	border:1px solid black;
+	border:1px solid lightgray;
+	font-size: .9rem;
+}
+
+.table th, .table td {
+	vertical-align: middle;
 }
 
