Adicionado a coluna de data do registro e horário da atualização
Realizado alteração no front dos status do paciente

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -40,6 +40,7 @@
 					<th class="celula celula-media">Especialidade</th>
 					<th class="celula celula-grande">Observação</th>
 					<th class="celula celula-media">Atendente<br>Registro</th>
+					<th class="celula celula-media">Data<br>Registro</th>
 					<th class="celula celula-grande">Informação<br>Registro</th>
 				</tr>
 			</thead>
