--- a/Views/partials/BuscarPacientes.ejs
+++ b/Views/partials/BuscarPacientes.ejs
@@ -24,9 +24,9 @@
           <option selected></option>
         <%}%>
         <option>AGUARDANDO</option>
-        <option>SEM CONTATO</option>
-        <option>FINALIZADO</option>
+        <option>RESOLVIDO</option>
         <option>FECHADO</option>
+        <option>DELETADO</option>
       </select>
     </div>
     <div class="col">
