--- a/Views/partials/modal.ejs
+++ b/Views/partials/modal.ejs
@@ -20,9 +20,10 @@
                     <div>
                         <label for="statusRegistro" class="mt-2">Status:</label>
                         <select type="text" name="statusRegistro" id="statusRegistro" class="form-control">
-                            <option>SEM CONTATO</option>
-                            <option>FINALIZADO</option>
+                            <option>AGUARDANDO</option>
+                            <option>RESOLVIDO</option>
                             <option>FECHADO</option>
+                            <option>DELETADO</option>
                         </select>
                     </div>
                     <div>
