Alterado o controller update para realizar atraves do Id
Realizado a configuração para não aceitar paciente com matricula duplicada quando tiver mesmo status e especialidade

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -28,7 +28,7 @@
 		<table class='tabela-pacientes table table-hover text-center'>
 			<thead class="cabecalho-tabela">
 				<tr class="linha-cabecalho">
-					<th class="celula celula-pequena">Matrícula<br>
+					<th class="celula celula-pequena">Matrícula
 						<input type="checkbox" class="checkAll" onclick="pacienteCheckbox()" id="checkAll">
 					</th>
 					<th class="celula celula-pequena">Data</th>
