--- a/Views/partials/inicioSituacao.ejs
+++ b/Views/partials/inicioSituacao.ejs
@@ -10,4 +10,8 @@
     </div>
 <%}%>
 
-
+<% if (info_msg.length>0) {%>
+    <div class="campo-design-info">
+        <p class='alerta-info'><%= info_msg%></p>
+    </div>
+<%}%>
