--- a/public/css/root.css
+++ b/public/css/root.css
@@ -99,7 +99,14 @@ body{
 	padding: .4rem;
 	background-color: #f8d7da;
 }
-
+.campo-design-info{
+	width:auto;
+	text-align: center;
+	border-radius: .4rem;
+  	border-color: #eeff00b7;
+	padding: .4rem;
+	background-color: #e7eb1fce;
+}
 .alerta-sucesso{
 	color: #155724;
 	font-size: 1.5rem;
@@ -108,6 +115,12 @@ body{
 
 .alerta-erro{
 	color: #721c24;
+	font-size: 1.5rem;
+	
+}
+
+.alerta-info{
+	color: lightyellow;
 	font-size: 1.5rem;
 	
 }
