Criado uma div para total de páginas e pacientes e numero de pacientes por páginas

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -49,6 +49,12 @@
 			</tbody>
 		</table>
 	</div>
+	<div class="caixa-modal">
+		<%- include('../partials/modal')%>
+	</div>
+	<div class="numero-paginas">
+		<%- include('../partials/paginas')%>
+	</div>
 	<script src="/js/Validation/DadosConverter.js"></script>
 	<script src="/js/Validation/mascara.js"></script>
 	<script src="/js/Validation/Validacao.js"></script>
