--- a/Views/partials/modal.ejs
+++ b/Views/partials/modal.ejs
@@ -1,4 +1,4 @@
-<button class="btn btn-secondary btn-modificar"onclick="abrirModal()">Modificar</button>
+<button class="btn btn-secondary btn-modificar"onclick="abrirModal()">Registrar</button>
 
 
 
