--- a/public/css/root.css
+++ b/public/css/root.css
@@ -103,9 +103,9 @@ body{
 	width:auto;
 	text-align: center;
 	border-radius: .4rem;
-  	border-color: #eeff00b7;
+  	border-color: yellow;
 	padding: .4rem;
-	background-color: #e7eb1fce;
+	background-color: yellow;
 }
 .alerta-sucesso{
 	color: #155724;
@@ -120,7 +120,7 @@ body{
 }
 
 .alerta-info{
-	color: lightyellow;
+	color: black;
 	font-size: 1.5rem;
 	
 }
