Atualizando as especialidades e ordem do filtro de busca

--- a/Views/partials/BuscarPacientes.ejs
+++ b/Views/partials/BuscarPacientes.ejs
@@ -49,23 +49,32 @@
         <option>Dermatologia</option>
         <option>Endocrinologia e Metabologia</option>
         <option>Endoscopia</option>
+        <option>Entrevista para Colonoscopia</option>
         <option>Gastroenterologia</option>
         <option>Geriatria</option>
-        <option>Ginecologia e Obstetrícia</option>
+        <option>Ginecologia</option>
+        <option>Ginecologia Obstetrícia</option>
+        <option>Fonoaudiólogo</option>
         <option>Hematologia e Hemoterapia</option>
+        <option>Holter</option>
         <option>Homeopatia</option>
         <option>Infectologia</option>
         <option>Mastologia</option>
+        <option>Mapa</option>
         <option>Nefrologia</option>
         <option>Neurologia</option>
         <option>Nutrologia</option>
-        <option>Oftalmologia</option>
+        <option>Oftalmologia - Consulta</option>
+        <option>Oftalmologia - Exame</option>
         <option>Ortopedia e Traumatologia</option>
         <option>Otorrinolaringologia</option>
         <option>Patologia</option>
         <option>Pediatria</option>
+        <option>Pequena Cirurgia - Consulta</option>
+        <option>Pequena Cirurgia - Procedimento</option>
         <option>Pneumologia</option>
         <option>Psiquiatria</option>
+        <option>Proctologia</option>
         <option>Radiologia e Diagnóstico por Imagem
         <option>Reumatologia</option>
         <option>Urologia</option>
@@ -84,6 +93,7 @@
         <option>Pneumologia Pediátrica</option>
         <option>Psicoterapia</option>
         <option>Reumatologia Pediátrica</option>
+        <option>Tomografia</option>
         <option>Ultrassonografia</option>
       </select>
     </div>
