Adicionando novas especialidades e apontando para a pasta views
Utilizando o Nginx com o sistema operacional Ubuntu foi necessário utilizar o pacote path para apontamento da pasta Views.

--- a/Views/pages/inicio.ejs
+++ b/Views/pages/inicio.ejs
@@ -75,10 +75,12 @@
 				<select name="especialidade" id="especialidade" class="campo-pequeno">
 					<option selected>Alergologia e Imunologia</option>
 					<option>Angiologia</option>
+					<option>Bucomaxilo</option>
 					<option>Cardiologia</option>
 					<option>Cirurgia Cardiovascular</option>
 					<option>Cirurgia de Cabeça e Pescoço</option>
 					<option>Cirurgia Geral</option>
+					<option>Cirurgia Ginecológica</option>
 					<option>Cirurgia Pediátrica</option>
 					<option>Cirurgia Plástica
 					<option>Cirurgia Torácica</option>
