--- a/Views/partials/BuscarPacientes.ejs
+++ b/Views/partials/BuscarPacientes.ejs
@@ -37,10 +37,12 @@
         <option id="statusEspecVazio"></option>
         <option>Alergologia e Imunologia</option>
         <option>Angiologia</option>
+        <option>Bucomaxilo</option>
         <option>Cardiologia</option>
         <option>Cirurgia Cardiovascular</option>
         <option>Cirurgia de Cabeça e Pescoço</option>
         <option>Cirurgia Geral</option>
+        <option>Cirurgia Ginecológica</option>
         <option>Cirurgia Pediátrica</option>
         <option>Cirurgia Plástica
         <option>Cirurgia Torácica</option>
